[package]
name = "corvidae"
version = "0.0.1"
edition = "2021"
authors = ["Sam Segal <segalcsam@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to quicky encrypt files with a passcode"
readme = "README.md"
homepage = "https://github.com/volvoDon/corvidae"
repository = "https://github.com/volvoDon/corvidae"
keywords = ["cli", "encryption"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
